--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         charset="utf-8">
   </head>
   <body>
-    <div class="aaa">
+    <div class="start-block">
       <img src="./eisenhower-matrix.jpg">
       <a 
           class="more-inf"
@@ -20,8 +20,8 @@
           Want more details?
       </a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="topSectionForAddingElementToList">
+    <div class="main-block">
+      <p id="add-item">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
           <input id="new-task"class="task" type="text">
