--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         charset="utf-8">
   </head>
   <body>
-    <div class="start-block">
+    <div class="start">
       <img src="./eisenhower-matrix.jpg">
       <a 
           class="more-inf"
@@ -20,7 +20,7 @@
           Want more details?
       </a>
     </div>
-    <div class="main-block">
+    <div class="main">
       <p id="add-item">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
@@ -29,7 +29,7 @@
         </div>
       </p>
       <h3>Todo</h3>
-      <ul id="incomplete-tasks">
+      <ul id="incomplete">
         <li>
           <input type="checkbox">
           <label class="task">Pay Bills</label>
@@ -50,7 +50,7 @@
         </li>
       </ul>
       <h3>Completed</h3>
-      <ul id="completed-tasks">
+      <ul id="completed">
         <li>
           <input type="checkbox" checked>
           <label class="task">See the Doctor</label>
