--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         media="screen"
         charset="utf-8">
   </head>
-  <body>
+  <body class="body">
     <div class="start">
-      <img src="./eisenhower-matrix.jpg">
+      <img class="start-img" src="./eisenhower-matrix.jpg">
       <a 
           class="more-inf"
           href="https://goal-life.com/page/method/matrix-eisenhower">
@@ -22,42 +22,42 @@
     </div>
     <div class="main">
       <p id="add-item">
-        <label for="new-task">Add Item</label>
+        <label for="new-task label" id="task-title">Add Item</label>
         <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
-          <button>Add</button>
+          <input id="new-task"class="task input-text input" type="text">
+          <button class="buttons">Add</button>
         </div>
       </p>
-      <h3>Todo</h3>
+      <h3 class="subtitle">Todo</h3>
       <ul id="incomplete">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg">
+        <li class="li-block">
+          <input type="checkbox" class="input-checkbox input">
+          <label class="task label">Pay Bills</label>
+          <input type="text" class="input-text task input">
+          <button class="edit buttons">Edit</button>
+          <button class="delete buttons">
+            <img class="delete-img" src="./remove.svg">
           </button>
         </li>
-        <li class="edit-mode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
-            <img src="./remove.svg">
+        <li class="edit-mode li-block">
+          <input type="checkbox" class="input-checkbox input">
+          <label class="task label">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="input-text task input">
+          <button class="edit buttons">Save</button>
+          <button class="delete buttons">
+            <img src="./remove.svg" class="delete-img">
           </button>
         </li>
       </ul>
-      <h3>Completed</h3>
+      <h3 class="subtitle">Completed</h3>
       <ul id="completed">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg">
+        <li class="li-block">
+          <input type="checkbox" class="input-checkbox input" checked >
+          <label class="task label">See the Doctor</label>
+          <input type="text" class="input-text task input">
+          <button class="edit buttons">Edit</button>
+          <button class="delete buttons">
+            <img src="./remove.svg" class="delete-img">
           </button>
         </li>
       </ul>
