--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
         charset="utf-8">
   </head>
   <body class="body">
-    <div class="start">
+    <header class="start">
       <img class="start-img" src="./eisenhower-matrix.jpg">
       <a 
           class="more-inf"
           href="https://goal-life.com/page/method/matrix-eisenhower">
           Want more details?
       </a>
-    </div>
-    <div class="main">
+    </header>
+    <main class="main">
       <p id="add-item">
         <label for="new-task label" id="task-title">Add Item</label>
-        <div class="task-row-wrapper">
+        <section class="task-row-wrapper">
           <input id="new-task"class="task input-text input" type="text">
           <button class="buttons">Add</button>
-        </div>
+        </section>
       </p>
       <h3 class="subtitle">Todo</h3>
       <ul id="incomplete">
@@ -61,7 +61,7 @@
           </button>
         </li>
       </ul>
-    </div>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
