fix: alternative for multimedia 1.2 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body class="body">
     <header class="start">
-      <img class="start-img" src="./eisenhower-matrix.jpg">
+      <img class="start-img" src="./eisenhower-matrix.jpg" alt="image Eisenhover matrix">
       <a 
           class="more-inf"
           href="https://goal-life.com/page/method/matrix-eisenhower">
@@ -36,7 +36,7 @@
           <input type="text" class="input-text task input">
           <button class="edit buttons">Edit</button>
           <button class="delete buttons">
-            <img class="delete-img" src="./remove.svg">
+            <img class="delete-img" src="./remove.svg" alt="image delete button">
           </button>
         </li>
         <li class="edit-mode li-block">
@@ -45,7 +45,7 @@
           <input type="text" value="Go Shopping" class="input-text task input">
           <button class="edit buttons">Save</button>
           <button class="delete buttons">
-            <img src="./remove.svg" class="delete-img">
+            <img src="./remove.svg" class="delete-img" alt="image delete button">
           </button>
         </li>
       </ul>
@@ -57,7 +57,7 @@
           <input type="text" class="input-text task input">
           <button class="edit buttons">Edit</button>
           <button class="delete buttons">
-            <img src="./remove.svg" class="delete-img">
+            <img src="./remove.svg" class="delete-img" alt="image delete button">
           </button>
         </li>
       </ul>
