--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
   </head>
   <body class="body">
     <header class="start">
-      <img class="start-img" src="./eisenhower-matrix.jpg" alt="image Eisenhover matrix">
+      <img 
+          class="start-img"
+          src="./eisenhower-matrix.jpg"
+          alt="image Eisenhover matrix">
       <a 
           class="more-inf"
           href="https://goal-life.com/page/method/matrix-eisenhower">
@@ -36,16 +39,25 @@
           <input type="text" class="input-text task input">
           <button class="edit buttons">Edit</button>
           <button class="delete buttons">
-            <img class="delete-img" src="./remove.svg" alt="image delete button">
+            <img 
+                class="delete-img"
+                src="./remove.svg"
+                alt="image delete button">
           </button>
         </li>
         <li class="edit-mode li-block">
           <input type="checkbox" class="input-checkbox input">
           <label class="task label">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="input-text task input">
+          <input
+              type="text"
+              value="Go Shopping"
+              class="input-text task input">
           <button class="edit buttons">Save</button>
           <button class="delete buttons">
-            <img src="./remove.svg" class="delete-img" alt="image delete button">
+            <img 
+                src="./remove.svg"
+                class="delete-img"
+                alt="image delete button">
           </button>
         </li>
       </ul>
@@ -57,7 +69,10 @@
           <input type="text" class="input-text task input">
           <button class="edit buttons">Edit</button>
           <button class="delete buttons">
-            <img src="./remove.svg" class="delete-img" alt="image delete button">
+            <img
+                src="./remove.svg"
+                class="delete-img"
+                alt="image delete button">
           </button>
         </li>
       </ul>
