fix: add HTML Line-Wrapping according to rule 2.5 in html-and-css.md

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
       <p class="main__add-item add-item">
         <label for="new-task label" class="add-item__label">Add Item</label>
         <section class="add-item__input input-wrapper">
-          <input id="new-task"class="input-wrapper__task task input-text input" type="text">
+          <input 
+              id="new-task"
+              class="input-wrapper__task task input-text input"
+              type="text">
           <button class="input-wrapper__buttons buttons">Add</button>
         </section>
       </p>
@@ -46,7 +49,9 @@
           </button>
         </li>
         <li class="incomplete__edit edit-mode li-block">
-          <input type="checkbox" class="edit-mode__input input-checkbox input">
+          <input 
+              type="checkbox" 
+              class="edit-mode__input input-checkbox input">
           <label class="edit-mode__label task label">Go Shopping</label>
           <input
               type="text"
@@ -64,9 +69,14 @@
       <h3 class="main__subtitle">Completed</h3>
       <ul class="main__completed" id="completed">
         <li class="completed-block li-block">
-          <input type="checkbox" class="completed-block__input input-checkbox input" checked >
+          <input 
+              type="checkbox" 
+              class="completed-block__input input-checkbox input"
+              checked >
           <label class="completed-block__label task label">See the Doctor</label>
-          <input type="text" class="completed-block__input input-text task input">
+          <input 
+              type="text" 
+              class="completed-block__input input-text task input">
           <button class="completed-block__edit-button edit buttons">Edit</button>
           <button class="completed-block__delete-button delete buttons">
             <img
